--- a/app/src/main/res/layout/activity_audio_list.xml
+++ b/app/src/main/res/layout/activity_audio_list.xml
@@ -25,8 +25,8 @@
 
     <ImageButton
         android:id="@+id/audio_list_record_ib"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
         android:layout_margin="5dp"
         android:src="@mipmap/mic_on" />
